# word-terminator

./: .gitignore  Cargo.toml  firmware.py
src/: board.rs  config.rs  game.rs  letters.rs  main.rs  mouse.rs  screen.rs  solver.rs  trie.rs
